WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173459
[GTK] Layout Test fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html makes the subsequent test case flaky crash.
https://bugs.webkit.org/show_bug.cgi?id=173459
Summary
[GTK] Layout Test fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.htm...
Fujii Hironori
Reported
2017-06-15 23:41:48 PDT
[GTK] Layout Test fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html makes the subsequent test case flaky crash.
> fujii@ubuntu $ ./Tools/Scripts/run-webkit-tests --gtk --release --no-new-test-results -v fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html --repeat-each=10 > Using port 'gtk-wk2' > Test configuration: <, x86, release> > Placing test results in /home/fujii/work/webkit/ga/WebKitBuild/Release/layout-test-results > Baseline search path: platform/gtk -> platform/wk2 -> generic > Using Release build > Pixel tests disabled > Regular timeout: 15000, slow test timeout: 75000 > Command line: /home/fujii/work/webkit/ga/Tools/jhbuild/jhbuild-wrapper --gtk run /home/fujii/work/webkit/ga/WebKitBuild/Release/bin/WebKitTestRunner - > > Found 1 test; running 1 (10 times each: --repeat-each=10 --iterations=1), skipping 0. > > Running 1 test > > Running 1 WebKitTestRunner. > > [1/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [2/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html failed unexpectedly (WebProcess crashed [pid=42703]) > [3/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [4/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html failed unexpectedly (WebProcess crashed [pid=42816]) > [5/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [6/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [7/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [8/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html failed unexpectedly (WebProcess crashed [pid=42927]) > [9/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [10/10] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html failed unexpectedly (WebProcess crashed [pid=43069]) > > 6 tests ran as expected, 4 didn't:
Attachments
gardening patch
(1.33 KB, patch)
2017-06-15 23:50 PDT
,
Fujii Hironori
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
gardening patch
(1.29 KB, patch)
2017-06-16 01:05 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(4.30 KB, patch)
2017-06-19 07:27 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-06-15 23:50:46 PDT
Created
attachment 313055
[details]
gardening patch
WebKit Commit Bot
Comment 2
2017-06-16 00:52:38 PDT
Comment on
attachment 313055
[details]
gardening patch Rejecting
attachment 313055
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 313055, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/3940214
Fujii Hironori
Comment 3
2017-06-16 01:05:45 PDT
Created
attachment 313062
[details]
gardening patch Oops. I'm sorry, please cq+ again.
WebKit Commit Bot
Comment 4
2017-06-16 04:24:23 PDT
Comment on
attachment 313062
[details]
gardening patch Clearing flags on attachment: 313062 Committed
r218387
: <
http://trac.webkit.org/changeset/218387
>
WebKit Commit Bot
Comment 5
2017-06-16 04:24:25 PDT
All reviewed patches have been landed. Closing bug.
Miguel Gomez
Comment 6
2017-06-16 05:49:19 PDT
I'm saving this to give it a look when I have a moment.
Fujii Hironori
Comment 7
2017-06-18 19:48:09 PDT
My example in
comment 0
wasn't a good example. I tested again with the problematic test case and two following simple test cases.
> fujii@ubuntu $ ./Tools/Scripts/run-webkit-tests --gtk --release --no-new-test-results --iterations=10 --child-processes=1 -v fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html fast/css/001.html fast/css/002.html > Using port 'gtk-wk2' > Test configuration: <, x86, release> > Placing test results in /home/fujii/work/webkit/ga/WebKitBuild/Release/layout-test-results > Baseline search path: platform/gtk -> platform/wk2 -> generic > Using Release build > Pixel tests disabled > Regular timeout: 15000, slow test timeout: 75000 > Command line: /home/fujii/work/webkit/ga/Tools/jhbuild/jhbuild-wrapper --gtk run /home/fujii/work/webkit/ga/WebKitBuild/Release/bin/WebKitTestRunner - > > Found 3 tests; running 3 (10 times each: --repeat-each=1 --iterations=10), skipping 0. > > Running 3 tests > > Running 1 WebKitTestRunner. > > [1/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [2/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=2438]) > [3/30] fast/css/002.html passed > [4/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [5/30] fast/css/001.html passed > [6/30] fast/css/002.html passed > [7/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [8/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=2548]) > [9/30] fast/css/002.html passed > [10/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [11/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=2676]) > [12/30] fast/css/002.html passed > [13/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [14/30] fast/css/001.html passed > [15/30] fast/css/002.html passed > [16/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [17/30] fast/css/001.html passed > [18/30] fast/css/002.html passed > [19/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [20/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=2784]) > [21/30] fast/css/002.html passed > [22/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [23/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=2919]) > [24/30] fast/css/002.html passed > [25/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [26/30] fast/css/001.html passed > [27/30] fast/css/002.html passed > [28/30] fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html passed > [29/30] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=3028]) > [30/30] fast/css/002.html passed > > 24 tests ran as expected, 6 didn't: > > > Regressions: Unexpected crashes (1) > fast/css/001.html [ Crash ] > > fujii@ubuntu $
Miguel Gomez
Comment 8
2017-06-19 05:55:44 PDT
I'll send a patch to fix this and
https://bugs.webkit.org/show_bug.cgi?id=173542
, which is the same problem.
Miguel Gomez
Comment 9
2017-06-19 05:56:03 PDT
***
Bug 173542
has been marked as a duplicate of this bug. ***
Miguel Gomez
Comment 10
2017-06-19 07:27:28 PDT
Created
attachment 313294
[details]
Patch
WebKit Commit Bot
Comment 11
2017-06-20 00:45:43 PDT
Comment on
attachment 313294
[details]
Patch Clearing flags on attachment: 313294 Committed
r218558
: <
http://trac.webkit.org/changeset/218558
>
WebKit Commit Bot
Comment 12
2017-06-20 00:45:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug