[GTK] Layout Test fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html makes the subsequent test case flaky crash. https://bugs.webkit.org/show_bug.cgi?id=173459

Reviewed by Carlos Garcia Campos.

Source/WebCore:

When destructing the VideoTextureCopierGStreamer, ensure that there's a previous gl context before trying
to make it current again. There are situations where no previous context may exist, which can trigger a crash.
Also, add DefaultImageOrientation to the switch that handles the video frame possible orientations, as it's the
value used when no rotation needs to be performed, and it's currently triggering an assertion.

Covered by existent tests.

* platform/graphics/gstreamer/VideoTextureCopierGStreamer.cpp:
(WebCore::VideoTextureCopierGStreamer::~VideoTextureCopierGStreamer):
(WebCore::VideoTextureCopierGStreamer::updateTextureSpaceMatrix):

LayoutTests:

Unskip fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html.

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/190484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218558 268f45cc-cd09-0410-ab3c-d52691b4dbfc